fixed alignments on desktop

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -3,7 +3,6 @@
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
   margin-bottom: 20px;
   background-color: $background-wh;
-  width: 90vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
