--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,25 +1,25 @@
 footer {
   background: $dark-blue;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  // display: flex;
+  // align-items: center;
+  // justify-content: space-between;
   height: 10em;
-  padding: 0px 50px;
+  padding: 5em;
   color: #ffff;
   font-family: $body;
-  font-size: .8em;
+  font-size: .5em;
 }
-.footer-links {
-  display: flex;
-  align-items: center;
-}
-.footer-links a {
-  color: black;
-  opacity: 0.15;
-  text-decoration: none;
-  font-size: 24px;
-  padding: 0px 10px;
-}
-.footer-links a:hover {
-  opacity: 1;
-}
+// .footer-links {
+  // display: flex;
+  // align-items: center;
+// }
+// .footer-links a {
+  // color: black;
+  // opacity: 0.15;
+  // text-decoration: none;
+  // font-size: 24px;
+  // padding: 0px 10px;
+// }
+// .footer-links a:hover {
+  // opacity: 1;
+// }
